--- a/requirements.txt
+++ b/requirements.txt
@@ -27,9 +27,11 @@ mypy-extensions==1.0.0
 networkx==3.2.1
 nltk==3.8.1
 numpy==1.26.4
+openai==1.2.2
 packaging==24.0
 pathspec==0.12.1
 pillow==10.2.0
+pinecone-client==2.2.1
 platformdirs==4.2.0
 psutil==5.9.5
 pydantic==2.6.3
